Use position: fixed for dialogs
Otherwise they may be partially off-screen when shown from the browser
page after starting to scroll it.

--- a/src/Dialog.css
+++ b/src/Dialog.css
@@ -1,5 +1,5 @@
 .Dialog {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
